<resources>
    <string name="app_name">AppSaludUnab</string>
    <string name="male">Masculino</string>
    <string name="female">Femenino</string>
    <string name="gender">Género</string>
    <string name="name">Nombre:</string>
    <string name="name_hint">Escriba su nombre</string>
    <string name="last_name">Apellido:</string>
    <string name="last_name_hint">Escriba su apellido</string>
    <string name="id">ID:</string>
    <string name="id_hint">Número de identificación</string>
    <string name="email">Email:</string>
    <string name="email_hint">correo@unab.edu.co</string>
    <string name="password">Clave:</string>
    <string name="password_hint">Escriba su clave</string>
    <string name="U_logo">Logo UNAB</string>
    <string name="send">Enviar</string>
    <string name="login">Iniciar sesión</string>
    <string name="register">Registrarme</string>
    <string name="yourImc">Tu IMC</string>
    <string name="basalMetabolism">Tu metabolismo basal es</string>
    <string name="weight">Peso</string>
    <string name="weight_hint">en kilogramos</string>
    <string name="height">Altura</string>
    <string name="request_google">8805879030-1q6qn7t57ejncmj35usvi8jsccrrukkn.apps.googleusercontent.com </string>

    // 458c22a7b598f84d6ff747dc9ea0d4872a530c32
</resources>