<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculateImc"
    android:orientation="vertical"
    android:background="@drawable/fondo3">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1.8"
        android:layout_gravity="center"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            >

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <LinearLayout
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/etTituloIMC"
                android:layout_width="175dp"
                android:layout_height="0dp"
                android:layout_weight="1.3"
                android:layout_margin="0dp"
                android:background="@drawable/stylo_borde_superior"
                android:backgroundTint="@color/univerisidad1"
                android:ems="10"
                android:inputType="number"
                android:shadowRadius="@integer/material_motion_duration_long_1"
                android:text="Tu IMC"
                android:textAlignment="textStart"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/etValorIMC"
                android:layout_width="175dp"
                android:layout_height="0dp"
                android:layout_margin="0dp"
                android:layout_weight="2"
                android:background="@drawable/stylo_borde_inferior"

                android:backgroundTint="@color/blanco"


                android:ems="10"
                android:inputType="numberDecimal"
                android:shadowRadius="@integer/material_motion_duration_long_1"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="30dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/etTituloMetabolicoBasa"
                android:layout_width="175dp"
                android:layout_height="0dp"
                android:layout_weight="1.3"
                android:layout_margin="0dp"
                android:background="@drawable/stylo_borde_superior"
                android:backgroundTint="@color/univerisidad1"
                android:ems="10"
                android:inputType="number"
                android:shadowRadius="@integer/material_motion_duration_long_1"
                android:text="Tu Metabolismo basal"
                android:textAlignment="textStart"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/etValorMetabolicoBasal"
                android:layout_width="175dp"
                android:layout_height="0dp"
                android:layout_margin="0dp"
                android:layout_weight="2"
                android:background="@drawable/stylo_borde_inferior"

                android:backgroundTint="@color/blanco"


                android:ems="10"
                android:inputType="numberDecimal"
                android:shadowRadius="@integer/material_motion_duration_long_1"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="30dp" />
        </LinearLayout>
        </LinearLayout>

    </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="2.6"
    android:layout_gravity="center"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:padding="1dp">

        <TextView
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_margin="0dp"
            android:background="@drawable/stylo_borde_izq"
            android:backgroundTint="@color/univerisidad1"
            android:gravity="center"
            android:text="Peso"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etPeso"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_margin="0dp"
            android:background="@drawable/stylo_borde_derecho"
            android:ems="10"
            android:hint="Escriba su peso en Kg"
            android:inputType="numberDecimal"
            android:shadowRadius="@integer/material_motion_duration_long_1"
            android:textColor="@color/univerisidad1" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:orientation="horizontal"
       >

        <TextView
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_margin="0dp"
            android:background="@drawable/stylo_borde_izq"
            android:backgroundTint="@color/univerisidad1"
            android:gravity="center"
            android:text="Altura"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etTalla"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_margin="0dp"
            android:background="@drawable/stylo_borde_derecho"
            android:ems="10"
            android:hint="Escriba su altura en mtrs"
            android:inputType="numberDecimal"
            android:shadowRadius="@integer/material_motion_duration_long_1"
            android:textColor="@color/univerisidad1" />>
    </LinearLayout>
    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_margin="0dp"
            android:background="@drawable/stylo_borde_izq"
            android:backgroundTint="@color/univerisidad1"
            android:gravity="center"
            android:text="Edad"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etEdad"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_margin="0dp"
            android:background="@drawable/stylo_borde_derecho"
            android:ems="10"
            android:hint="Escriba su edad en años"
            android:inputType="numberDecimal"
            android:shadowRadius="@integer/material_motion_duration_long_1"
            android:textColor="@color/univerisidad1" />>
    </LinearLayout>
   <LinearLayout
            android:layout_width="350dp"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:padding="5dp"
            android:layout_marginVertical="5dp"
            android:background="@drawable/stylo_borde_total"
            android:backgroundTint="@color/univerisidad1"
            android:layout_gravity="center"
            >

            <TextView
                android:layout_width="75dp"
                android:layout_height="40dp"


                android:text="@string/gender"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:padding="5dp"
                android:layout_gravity="center"
            />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/weightIcon78"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:src="@drawable/outline_male_white_48"
                    android:contentDescription="@string/male"
                    />

                <ImageView
                    android:id="@+id/weightIcon59"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:src="@drawable/outline_female_white_48"
                    android:contentDescription="@string/female"
                    />

            </LinearLayout>

            <RadioGroup
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:orientation="vertical"
                >

                <RadioButton
                    android:id="@+id/maleRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:text="@string/male"

                    android:textColor="@color/white"
                    />

                <RadioButton
                    android:id="@+id/femaleRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/female"

                    android:textColor="@color/white" />

            </RadioGroup>

        </LinearLayout>


    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:backgroundTint="@color/univerisidadClaro"

        android:gravity="center"
        android:padding="1dp"
        android:shadowRadius="@integer/material_motion_duration_long_1"
        android:text="Calcular IMC"
        android:textAllCaps="false"
        android:textColor="@color/univerisidad1"
        android:textSize="25sp"
        app:cornerRadius="200dp" />
</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tvTituloObservaciones"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.9"
            android:layout_margin="0dp"
            android:background="@drawable/stylo_borde_superior"
            android:backgroundTint="@color/univerisidad1"
            android:ems="10"
            android:inputType="number"
            android:shadowRadius="@integer/material_motion_duration_long_1"
            android:text="Observaciones:"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="20dp"/>

        <EditText
            android:id="@+id/etObservaciones"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="0dp"
            android:layout_weight="4"
            android:background="@drawable/stylo_borde_inferior"
            android:backgroundTint="@color/white"
            android:backgroundTintMode="src_atop"
            android:ems="10"
            android:inputType="textCapSentences|textMultiLine"
            android:shadowRadius="@integer/material_motion_duration_long_1"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="20dp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/btnRegresar"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:backgroundTint="@color/univerisidadClaro"
            android:gravity="center"
            android:padding="5dp"
            android:shadowRadius="@integer/material_motion_duration_long_1"
            android:text="Regresar"
            android:textAllCaps="false"
            android:textColor="@color/univerisidad1"
            android:textSize="25sp"
            app:cornerRadius="200dp" />
        <Button
            android:id="@+id/btnHistorial"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:backgroundTint="@color/univerisidadClaro"
            android:gravity="center"
            android:padding="5dp"
            android:shadowRadius="@integer/material_motion_duration_long_1"
            android:text="Historial"
            android:textAllCaps="false"
            android:textColor="@color/univerisidad1"
            android:textSize="25sp"
            app:cornerRadius="200dp" />
    </LinearLayout>


</LinearLayout>